word wrap issue

--- a/SEOBOX/css/extent.css
+++ b/SEOBOX/css/extent.css
@@ -10371,7 +10371,7 @@ th {
 
 td {
 	padding: 7px 10px;
-	word-break: break-all;
+
 }
 
 input[type='text'] {
